--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>My name is Matt Foley and I am a motivational speaker. Now let's get started by letting me give you a little bit of a scenario of what my life is all about. FIrst off, I am 35 years old, I am thrice divorced, and I live in a van down by the river.</p>
     
     <h2>Testimonials</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat eligendi dolor fuga hic amet earum quae quas, eveniet non tempora eaque ipsa doloribus quia ab, sunt culpa totam dolorem libero.</p>
+    <p>Lorem ipsum dolor sit amet en consectetur adipisicing elit. Placeat eligendi dolor fuga hic amet earum quae quas, eveniet non tempora eaque ipsa doloribus quia ab, sunt culpa totam dolorem libero.</p>
     
 </body>
 </html>
